--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -52,7 +52,7 @@
 }
 
 .display_none {
-  display: none;
+  display: none !important;
 }
 
 .card-product {
@@ -108,15 +108,15 @@
   .btn {
     margin-top: -16px;
     font-size: 14px;
-    padding: 14px 20px;
+    padding: 14px 20px 13px 20px;
     border-radius: 0 10px 10px 0;
   }
 }
 
 .message-area {
   position: absolute;
-  bottom: 20;
-
+  bottom: -5px;
+  right: 13px;
 }
 .btn-show {
   padding-top: 10px;
@@ -128,6 +128,9 @@
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
 
 .wrap-show {
@@ -138,26 +141,36 @@
 }
 
 .show-item-container {
- display: flex;
- justify-content: space-evenly;
- align-items: flex-start;
- margin-bottom: 10px;
-  .fa-clock, .fa-user, .fa-globe-americas {
-    margin: 10px;
-    font-size: 30px;
-  }
-  .waiting-time-show, .capacity-show, .category-show {
   display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  margin-bottom: 18px;
+  margin-top: 7px;
+  .fa-clock,
+  .fa-user,
+  .fa-globe-americas {
+    margin: 10px;
+    font-size: 27px;
+  }
+  .waiting-time-show,
+  .capacity-show,
+  .category-show {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
   }
   .progress {
     width: 100%;
   }
   p {
     margin-bottom: 0;
-    font-weight: bold;
+    font-weight: 500;
+    font-size: 14px;
+  }
+  h6 {
+    margin-top: 0px !important;
+    font-size: 14px;
   }
 }
 
@@ -178,11 +191,11 @@
 }
 
 .hr-tag hr {
-  font: 10px #BEC1CD;
+  font: 10px #bec1cd;
 }
 
 .message-container {
-  padding: 10px 0;
+  padding: 6px 0;
 }
 .back-btn {
   margin-left: 20px;
@@ -217,5 +230,11 @@
 }
 
 .msg-scroll {
+  margin-top: 18px;
+  max-height: 320px;
   overflow-y: scroll !important;
+}
+
+.wrap-message {
+  padding: 0 20px;
 }
