--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,6 @@
   <body>
     <%= render 'shared/flashes' %>
     <%= yield %>
-    <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
+<!--     <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script> -->
   </body>
 </html>
