--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -56,6 +56,11 @@
             <% end %>
           </div>
         <h6 class="ml-2 mt-1">(<%= venue.events.last.ratings.count %>)</h6>
+          <div class="avatars-online">
+          <% venue.messaging_user_avatars.each do |photo| %>
+            <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>" />
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
