--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -230,8 +230,8 @@
 }
 
 .msg-scroll {
-  margin-top: 18px;
-  max-height: 320px;
+  margin-top: 10px;
+  max-height: 34vh;
   overflow-y: scroll !important;
 }
 
