edit search result card

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,7 +1,7 @@
 <div class="wrap-all">
 <div class="wrap-show-first">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url(<%=cl_image_path @venue.photos[0].key %>)">
-    <%= link_to :back do %>
+    <%= link_to venues_path do %>
     <div class="back-btn">
       <i class="fa fa-arrow-left btn" aria-hidden="true"></i>
     </div>
