--- a/app/assets/stylesheets/pages/_search_result.scss
+++ b/app/assets/stylesheets/pages/_search_result.scss
@@ -1,6 +1,6 @@
 .card-1 {
-  height: 150px;
-  width: 160px;
+  height: 170px;
+  width: 190px;
 }
 
 .event-card-search {
@@ -10,8 +10,9 @@
   position: relative;
   background-color: white;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+  height: 170px;
   .card-info {
-    padding: 0 10px 0 15px;
+    // padding: 0 10px 0 10px;
     margin: 0 auto;
     p {
       font-size: 12px;
@@ -34,7 +35,7 @@
   }
   h6 {
     color: black;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-size: 12px;
     margin-top: -5px;
   }
@@ -55,13 +56,17 @@
 }
 
 .crowd_level {
-  margin-top: -4px;
+  margin-top: 5px;
   i {
     font-size: 8px;
     margin: 0 -1px;
   }
 }
+.capacity_waiting_time {
+  margin-top: 9px;
+}
 
 .capacity {
   display: flex;
+  padding-bottom: 3px;
 }
