--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -160,9 +160,11 @@
     justify-items: center;
     align-items: center;
   }
+
   .progress {
     width: 100%;
   }
+
   p {
     margin-bottom: 0;
     font-weight: 500;
@@ -237,4 +239,8 @@
 
 .wrap-message {
   padding: 0 20px;
+}
+
+.progress {
+  height: 10px;
 }
