--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,11 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #fd1015;
+$red: #FF7700;
 $blue: #167ffb;
 $yellow: #ffc65a;
 $orange: #e67e22;
-$green: #1edd88;
+$green: #CCD623;
 $gray: #0e0000;
 $light-gray: #f4f4f4;
 $black: #000000;
