--- a/app/assets/stylesheets/pages/_search_result.scss
+++ b/app/assets/stylesheets/pages/_search_result.scss
@@ -1,6 +1,6 @@
 .card-1 {
-  height: 170px;
-  width: 190px;
+  height: 155px;
+  width: 160px;
 }
 
 .event-card-search {
@@ -10,9 +10,9 @@
   position: relative;
   background-color: white;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-  height: 170px;
+  height: 155px;
   .card-info {
-    // padding: 0 10px 0 10px;
+    padding: 0 10px 0 10px;
     margin: 0 auto;
     p {
       font-size: 12px;
@@ -69,4 +69,10 @@
 .capacity {
   display: flex;
   padding-bottom: 3px;
+  .fa {
+    font-size: 11px;
+  }
+}
+.progress {
+  height: 7px;
 }
