avatar appears on chat and index page

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="message-container" id="message-<%= message.id %>">
   <div class="message-column d-flex justify-content-between align-items-center">
     <div class="image mr-3">
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+      <img class="avatar" alt="avatar" src="<%=cl_image_path message.user.profile_photo.key %>" />
     </div>
     <% if message.photo.attached? %>
       <%= cl_image_tag message.photo.key, height: 100, width: 200, crop: :fill %>
@@ -10,3 +10,4 @@
       <a><%= message.created_at.strftime("%l:%M%p") %></a>
   </div>
 </div>
+<!-- we want to call the profile pic of the person WHENEVER he posts a message -->
