--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,6 +2,16 @@
   width: 40px;
   border-radius: 50%;
 }
+
+.card-trip-infos .avatars-online {
+  position: absolute;
+  top: 81px;
+  .avatar {
+    width: 30px;
+    border-radius: 50%;
+  }
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
