update mobile menu bar

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     </div>
     <% if message.photo.attached? %>
-      <%= cl_image_tag message.photo.key, height: 100, width: 200, crop: :fill %>
+      <%= cl_image_tag message.photo.key, height: 178, width: 100, crop: :fit %>
     <% end %>
     <p class="flex-grow-1"><%= message.content %></p>
       <a><%= message.created_at.strftime("%l:%M%p") %></a>
