--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -74,6 +74,7 @@ input.empty {
   margin: 0 10px 10px 0;
   border-radius: 23px;
   position: relative;
+  background-repeat: no-repeat;
 
   .card-trip-infos {
     position: absolute;
