changed the seed file again and modify the wording in the raiting form

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -121,11 +121,12 @@
               </div>
             </div>
             <!-- slider for choosing crowded level-->
-            <h4 class="modal-title">how crowded is the place?</h4>
-            <div class=d-flex>
-            <p>not crowded</p>
-              <input type="range" name="crowd_level" min="0" max="10" value="1" id="fader"
-                step="5" list="volsettings"> <p>very crowded</p>
+            <h4 class="modal-title">How crowded is the place?</h4>
+            <div class="d-flex justify-content-center">
+            <p>0</p>
+            <input type="range" name="crowd_level" min="0" max="10" value="1" id="fader"
+                step="5" list="volsettings">
+            <p>10</p>
               <datalist id="volsettings">
                 <option>0</option>
                 <option>1</option>
@@ -142,7 +143,7 @@
               </div>
 
             <!-- drop down menu for choosing waiting time-->
-            <h4 class="modal-title">how long did you wait?</h4>
+            <h4 class="modal-title">How long did you wait?</h4>
                 <div class="form-row align-items-center justify-content-center">
                   <div class="col-auto my-1 w-50">
                     <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
@@ -157,7 +158,7 @@
                     </select>
                   </div>
                 </div>
-          </div>  
+          </div>
         </div>
 
         <div class="modal-footer">
