--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -240,3 +240,15 @@
 .wrap-message {
   padding: 0 20px;
 }
+
+.message-with-user {
+  h6 {
+    font-size: 11px;
+    font-style: italic;
+    margin: -2px;
+    opacity: 0.4;
+  }
+  p {
+    font-size: 15px;
+  }
+}
