--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -6,6 +6,7 @@
 <% if @search_query.nil? || @search_query.empty? %>
 <div class="container_orange orange">
   <div class="container header-index">
+      <%= image_tag ("logo-2.png"), class: "logo-3"  %>
       <h2>Where would<br>you like to go?</h2>
       <div class="mt-3 w-100">
         <%= simple_form_for :search, method: "GET" do |f| %>
@@ -15,7 +16,7 @@
   </div>
 </div>
 
-<div class="container mt-3 tabs-and-event-cards ml-3">
+<!-- <div class="container mt-3 tabs-and-event-cards ml-3">
   <div class="filter-tabs">
     <ul class="list-inline tabs-underlined d-flex">
         <li>
@@ -29,53 +30,108 @@
         </li>
     </ul>
     </div>
-</div>
+</div> -->
 <!-- cards -->
-<div class="container mt-3 d-flex cards-container">
-  <div class="row">
-    <% @venues.each do |venue|%>
-    <% if venue.events != nil %>
-    <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key, height: 350, crop: :fit%>)">
-      <div class="go_next">
-        <a><i class='fas fa-chevron-right'></i></a>
-      </div>
-      <div class="card-trip-infos">
-        <h2><%= link_to venue.name, venue_path(venue), data: { turbolinks: false} %></h2>
-        <h6><%= venue.events.last.name %></h6>
-        <div class="stars-card d-flex align-items-center">
-          <div class="stars">
-            <% full_stars = venue.events.last.average_rating %>
-            <% empty_stars = 5 - full_stars %>
+<div class="wrap-index-cards-section mt-1">
+  <div class="index-section-1">
+    <div class="container index-title-1 ml-2 mt-4">
+      <h2>Popular Bar</h2>
+      <div class="hline-2"></div>
+    </div>
+    <div class="container mt-3 d-flex cards-container">
+      <div class="row">
+        <% @venues_bar.each do |venue|%>
+        <% if venue.events != nil %>
+        <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key, height: 350, crop: :fit%>)">
+          <div class="card-trip-infos">
+            <h2><%= link_to venue.name, venue_path(venue), data: { turbolinks: false} %></h2>
+            <h6><%= venue.events.last.name %></h6>
+            <div class="stars-card d-flex align-items-center">
+              <div class="stars">
+                <% full_stars = venue.events.last.average_rating %>
+                <% empty_stars = 5 - full_stars %>
 
-            <% full_stars.times do %>
-              <i class="fa fa-star orange" aria-hidden="true"></i>
-            <% end %>
+                <% full_stars.times do %>
+                  <i class="fa fa-star orange" aria-hidden="true"></i>
+                <% end %>
 
-            <% empty_stars.times do %>
-              <i class="fa fa-star" aria-hidden="true"></i>
-            <% end %>
+                <% empty_stars.times do %>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                <% end %>
+              </div>
+            <h6 class="ml-2 mt-1">(<%= venue.events.last.ratings.count %>)</h6>
+
+            </div>
+                      <div class="avatars-online">
+              <% venue.messaging_user_avatars.each do |photo| %>
+                <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>" />
+                <% end %>
+              </div>
           </div>
-        <h6 class="ml-2 mt-1">(<%= venue.events.last.ratings.count %>)</h6>
-
         </div>
-                  <div class="avatars-online">
-          <% venue.messaging_user_avatars.each do |photo| %>
-            <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>" />
-            <% end %>
+
+        <% elsif venue.events.empty? %>
+          <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
+          <h3><%= venue.name %></h3>
+          <p>no event at the moment</p>
           </div>
+        <% end %>
+        <% end %>
       </div>
     </div>
+  </div>
+    <div class="index-section-2">
+    <div class="container index-title-1 ml-2 mt-4">
+      <h2>Popular Cafe</h2>
+      <div class="hline-2"></div>
+    </div>
+    <div class="container mt-3 d-flex cards-container">
+      <div class="row">
+        <% @venues_cafe.each do |venue|%>
+        <% if venue.events != nil %>
+        <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key, height: 350, crop: :fit%>)">
+          <div class="card-trip-infos">
+            <h2><%= link_to venue.name, venue_path(venue), data: { turbolinks: false} %></h2>
+            <h6><%= venue.events.last.name %></h6>
+            <div class="stars-card d-flex align-items-center">
+              <div class="stars">
+                <% full_stars = venue.events.last.average_rating %>
+                <% empty_stars = 5 - full_stars %>
 
-    <% elsif venue.events.empty? %>
-      <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
-      <h3><%= venue.name %></h3>
-      <p>no event at the moment</p>
+                <% full_stars.times do %>
+                  <i class="fa fa-star orange" aria-hidden="true"></i>
+                <% end %>
+
+                <% empty_stars.times do %>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                <% end %>
+              </div>
+            <h6 class="ml-2 mt-1">(<%= venue.events.last.ratings.count %>)</h6>
+
+            </div>
+                      <div class="avatars-online">
+              <% venue.messaging_user_avatars.each do |photo| %>
+                <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>" />
+                <% end %>
+              </div>
+          </div>
+        </div>
+
+        <% elsif venue.events.empty? %>
+          <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
+          <h3><%= venue.name %></h3>
+          <p>no event at the moment</p>
+          </div>
+        <% end %>
+        <% end %>
       </div>
-    <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
 <% else %>
+
+
+
 <!--   search result layout -->
 <div class="container_orange orange">
   <div class="container header-index">
