--- a/app/assets/stylesheets/pages/_search_result.scss
+++ b/app/assets/stylesheets/pages/_search_result.scss
@@ -13,7 +13,7 @@
   height: 155px;
   .card-info {
     padding: 0 10px 0 10px;
-    margin: 0 auto;
+    margin-left: 10px;
     p {
       font-size: 12px;
       margin: 0;
@@ -28,8 +28,8 @@
     line-height: 15px;
   }
   h2 a {
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 700;
     color: black;
     margin-bottom: 0;
   }
@@ -75,4 +75,9 @@
 }
 .progress {
   height: 7px;
+}
+
+.search_scrollable {
+  max-height: 63vh;
+  overflow-y: scroll !important;
 }
