solve timezone issue

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -18,3 +18,4 @@
   </div>
 </div>
 <!-- we want to call the profile pic of the person WHENEVER he posts a message -->
+<!-- strftime("%l:%M%p") -->
