fixing bugs on form

--- a/app/assets/stylesheets/components/_ratingmovar.scss
+++ b/app/assets/stylesheets/components/_ratingmovar.scss
@@ -6,15 +6,36 @@
         text-align: center;
         justify-content: center;
         margin-bottom: 0;
+        color: #ff7700;
     }
 }
 
+.modal-title {
+  margin-bottom: 10px !important;
+}
+
+.crowd-level-rating p {
+  margin-top: 10px;
+}
+
 .rating-body {
-  text-align: center
+  text-align: center;
+  input {
+    background: orange;;
+  }
+
+  #fader {
+    color: white;
+
+  }
 }
 
 .rating-buttons {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  .btn.btn-primary{
+    border-radius: 10px !important;
+  }
 }
+
