added user location

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #FF7700;
 $blue: #167ffb;
-$yellow: #ffc65a;
+$yellow: #158596;
 $orange: #e67e22;
 $green: #CCD623;
 $gray: #0e0000;
