--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -35,7 +35,7 @@
 <div class="wrap-index-cards-section mt-1">
   <div class="index-section-1">
     <div class="container index-title-1 ml-3 mt-4">
-      <h2>Popular Bar</h2>
+      <h2>Popular Bars</h2>
       <div class="hline-2"></div>
     </div>
     <div class="container mt-3 d-flex cards-container">
@@ -82,7 +82,7 @@
   </div>
     <div class="index-section-2">
     <div class="container index-title-1 ml-3 mt-4">
-      <h2>Popular Cafe</h2>
+      <h2>Popular Cafes</h2>
       <div class="hline-2"></div>
     </div>
     <div class="container mt-3 d-flex cards-container">
@@ -208,17 +208,20 @@
       <% elsif venue.events.empty? %>
         <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
         <h3><%= venue.name %></h3>
-        <p>no event at the moment</p>
+        <p>No event at the moment</p>
         </div>
     <% end %>
     <% end %>
   </div>
 </div>
+  <!-- Map container -->
   <div class="container my-listing-section tab-pane fade" id="Approved">
-      <div id="map"
-       style="width: 100%; height: 60vh;"
-       data-markers="<%= @markers.to_json %>"
-       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    <button class="btn btn-info" id="fly">Locate me</button>
+    <div id="map"
+     style="width: 100%; height: 60vh;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
   </div>
 
   <!-- waiting_time -->
