fixed css for form

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -122,18 +122,24 @@
             </div>
             <!-- slider for choosing crowded level-->
             <h4 class="modal-title">How crowded is the place?</h4>
-              <div class="d-flex justify-content-center">
-                <p>Not Crowded</p>
+              <div class="crowd-rating d-flex align-items-center justify-content-center">
+                <p>No Crowd</p>
                 <div class="crowd-level-rating">
                   <input type="range" name="crowd_level" min="0" max="10" value="1" id="fader"
-                      step="2.5" list="volsettings">
+                      step="1" list="volsettings">
                 </div>
                 <p>Crowded</p>
                 <datalist id="volsettings">
                   <option>0</option>
-                  <option>2.5</option>
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
                   <option>5</option>
-                  <option>7.5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
                   <option>10</option>
                 </datalist>
               </div>
