--- a/app/assets/stylesheets/pages/_search_result.scss
+++ b/app/assets/stylesheets/pages/_search_result.scss
@@ -81,3 +81,11 @@
   max-height: 63vh;
   overflow-y: scroll !important;
 }
+
+.marker {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+}
