--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -220,7 +220,8 @@
     <div id="map"
      style="width: 100%; height: 60vh;"
      data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+     data-profile-url="<%= current_user.profile_photo.attached? ? cl_image_path(current_user.profile_photo.key) : 'https://placekitten.com/200/138' %>">
     </div>
   </div>
 
