--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -63,9 +63,13 @@
             <h6 class="ml-2 mt-1">(<%= venue.events.last.ratings.count %>)</h6>
 
             </div>
-                      <div class="avatars-online">
-              <% venue.messaging_user_avatars.each do |photo| %>
-                <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>" />
+              <div class="avatars-online">
+                <% venue.messaging_user_avatars.each do |photo| %>
+                  <% if photo.attached? %>
+                    <%= cl_image_tag photo.key, class: 'avatar' %>
+                  <% else %>
+                    <%= image_tag "https://placekitten.com/408/287", class: 'avatar' %>
+                  <% end %>
                 <% end %>
               </div>
           </div>
@@ -98,11 +102,9 @@
               <div class="stars">
                 <% full_stars = venue.events.last.average_rating %>
                 <% empty_stars = 5 - full_stars %>
-
                 <% full_stars.times do %>
                   <i class="fa fa-star orange" aria-hidden="true"></i>
                 <% end %>
-
                 <% empty_stars.times do %>
                   <i class="fa fa-star" aria-hidden="true"></i>
                 <% end %>
@@ -110,9 +112,13 @@
             <h6 class="ml-2 mt-1">(<%= venue.events.last.ratings.count %>)</h6>
 
             </div>
-                      <div class="avatars-online">
-              <% venue.messaging_user_avatars.each do |photo| %>
-                <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>" />
+              <div class="avatars-online">
+                <% venue.messaging_user_avatars.each do |photo| %>
+                <% if photo.attached? %>
+                  <img class="avatar" alt="avatar" src="<%=cl_image_path photo.key %>">
+                <% else %>
+                  <%= image_tag "https://placekitten.com/408/287", class: 'avatar' %>
+                <% end %>
                 <% end %>
               </div>
           </div>
@@ -222,7 +228,7 @@
      style="width: 100%; height: 60vh;"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-     data-profile-url="<%= current_user.profile_photo.attached? ? cl_image_path(current_user.profile_photo.key) : 'https://placekitten.com/200/138' %>">
+     data-profile-url="<%= current_user.profile_photo.attached? ? cl_image_path(current_user.profile_photo.key) : 'https://placekitten.com/408/287' %>">
     </div>
   </div>
 
