--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -46,12 +46,10 @@
           <div class="card-trip-infos">
             <h2><%= link_to venue.name, venue_path(venue), data: { turbolinks: false} %></h2>
             <h6><%= venue.description %></h6>
-            <!-- <h6><%= venue.events.last.name %></h6> -->
             <div class="stars-card d-flex align-items-center">
               <div class="stars">
                 <% full_stars = venue.events.last.average_rating %>
                 <% empty_stars = 5 - full_stars %>
-
                 <% full_stars.times do %>
                   <i class="fa fa-star orange" aria-hidden="true"></i>
                 <% end %>
@@ -79,7 +77,7 @@
         <% elsif venue.events.empty? %>
           <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
           <h3><%= venue.name %></h3>
-          <p>no event at the moment</p>
+          <p>No event at the moment</p>
           </div>
         <% end %>
         <% end %>
@@ -99,7 +97,6 @@
           <div class="card-trip-infos">
             <h2><%= link_to venue.name, venue_path(venue), data: { turbolinks: false} %></h2>
             <h6><%= venue.description %></h6>
-            <!-- <h6><%= venue.events.last.name %></h6> -->
             <div class="stars-card d-flex align-items-center">
               <div class="stars">
                 <% full_stars = venue.events.last.average_rating %>
@@ -174,7 +171,6 @@
         <div class="card-info">
           <h2><%= link_to venue.name, venue_path(venue), data: { turbolinks: false} %></h2>
           <h6><%= venue.description %></h6>
-          <!-- <h6><%= venue.events.last.name %></h6> -->
           <div class="capacity align-items-center">
             <!-- <p> Event Rating: </p> -->
             <% full_stars = venue.events.last.average_rating %>
@@ -246,7 +242,6 @@
         <div class="card-info">
           <h2><%= link_to venue.name, venue_path(venue) %></h2>
           <h6><%= venue.description %></h6>
-          <!-- <h6><%= venue.events.last.name %></h6> -->
           <div class="capacity align-items-center">
             <!-- <p> Event Rating: </p> -->
             <% full_stars = venue.events.last.average_rating %>
